--- a/src/emails/html/validation.html
+++ b/src/emails/html/validation.html
@@ -54,7 +54,7 @@
 
     <a
       class="button"
-      href="https://denumar.com/validate"
+      href="https://denumar.com/proposal/validate"
     >
       Valider mon identité
     </a>
